clean: remove wildcard imports from tests